# candy-stick-pico

./: .gitignore  CMakeLists.txt  README.md  build.zig
include/: rpi_pico_lfs.h
src/c/: rpi_pico_lfs.c
src/zig/: lfs.zig  main.zig
